[gd_scene load_steps=13 format=3 uid="uid://cf84vd2bd7k42"]

[ext_resource type="Script" path="res://scenes/scripts/Player.gd" id="1_cg1xk"]
[ext_resource type="Texture2D" uid="uid://nv4pieyk40hc" path="res://resources/sprites/player1.png" id="2_keo2f"]
[ext_resource type="Texture2D" uid="uid://bdy5ui88wbcst" path="res://resources/sprites/light.png" id="3_rvp8e"]
[ext_resource type="Texture2D" uid="uid://dqltu5x8qmwuw" path="res://resources/sprites/numbers.png" id="4_uh1p5"]
[ext_resource type="Script" path="res://scenes/scripts/WavingElement.gd" id="5_q4jto"]
[ext_resource type="Texture2D" uid="uid://maeywmojl0sp" path="res://resources/sprites/indicator.png" id="6_r5vuf"]
[ext_resource type="Texture2D" uid="uid://bouvraacltlbu" path="res://resources/sprites/alert.png" id="7_olnf0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p0wcd"]
radius = 11.0454

[sub_resource type="Animation" id="Animation_s4mho"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_uqpy0"]
resource_name = "idle"
length = 0.125013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jh6gn"]
resource_name = "walk"
length = 0.70001
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wbif2"]
_data = {
"RESET": SubResource("Animation_s4mho"),
"idle": SubResource("Animation_uqpy0"),
"walk": SubResource("Animation_jh6gn")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_cg1xk")

[node name="VisionCone" type="Area2D" parent="."]
visible = false
metadata/_edit_lock_ = true

[node name="Hitbox" type="CollisionPolygon2D" parent="VisionCone"]
polygon = PackedVector2Array(0, 0, 200, -500, -200, -500)

[node name="Light" type="PointLight2D" parent="VisionCone"]
color = Color(0.894118, 0.768627, 0, 1)
energy = 0.2
shadow_enabled = true
texture = ExtResource("3_rvp8e")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_keo2f")
hframes = 8

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_p0wcd")

[node name="Raycast" type="RayCast2D" parent="."]
collision_mask = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wbif2")
}

[node name="Number" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(20, -22)
texture = ExtResource("4_uh1p5")
vframes = 5
script = ExtResource("5_q4jto")

[node name="Selection" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -24)
texture = ExtResource("6_r5vuf")
script = ExtResource("5_q4jto")

[node name="Exclamation" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -24)
texture = ExtResource("7_olnf0")

[connection signal="body_entered" from="VisionCone" to="." method="enter_vision"]
[connection signal="body_exited" from="VisionCone" to="." method="exit_vision"]
